Add endpoint to get all values
Change type of well_known_values to JsonObject
